--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,3 +1,15 @@
-$c-gray: #eee;
-
 $contrast: #0738dd;
+$like-white: #fbfafd;
+$text: #152370;
+$text-contrast: #fff;
+
+$title-shadow: 0 4px 4px rgba(0, 0, 0, 0.55);
+
+$page-padding: 27px;
+$border-radius: 10px;
+
+$card-color: #333;
+$card-shadow: 0 1px 30px rgba(111, 178, 216, 0.25);
+$card-gradient: linear-gradient(360deg, #0083fe 11.12%, #091cd0 100%);
+$card-height: 300px;
+$card-width: 330px;
