--- a/src/styles/footer-end.scss
+++ b/src/styles/footer-end.scss
@@ -6,12 +6,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 76px;
 
   background: $contrast;
 
-  &__text {
+  // &__text {
 
-  }
+  // }
 }
