--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,11 @@
 @import "creative";
 @import "optimization";
 @import "targeting";
+@import "portfolio";
+@import "post";
+@import "button";
+@import "ROI";
+@import "row-text";
 @import "blue-row";
 @import "mail";
 
