--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -10,7 +10,7 @@
   font-size: 54px;
   line-height: 64.8px;
   font-weight: 600;
-  color: #fff;
+  color: $text-contrast;
 }
 
 %h2 {
@@ -19,10 +19,19 @@
   font-weight: 600;
 }
 
+%h3 {
+  font-size: 34px;
+  line-height: 41px;
+  font-weight: 600;
+  color: $text-contrast;
+}
+
 %subheader {
   font-size: 16px;
   line-height: 19.2px;
   color: $text-contrast;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 %intro {
@@ -42,4 +51,9 @@
   line-height: 26.4px;
   font-weight: 600px;
   text-transform: uppercase;
+}
+
+%post-details {
+  line-height: 55px;
+  font-weight: 500;
 }
