--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,11 +2,16 @@ $contrast: #0738dd;
 $like-white: #fbfafd;
 $text: #152370;
 $text-contrast: #fff;
+$wave-bg: #eff2f3;
 
 $title-shadow: 0 4px 4px rgba(0, 0, 0, 0.55);
+$h3-shadow: 0 4px 4px rgba(0, 0, 0, 0.55);
+$post-shadow: drop-shadow(0 1px 10px rgba(0, 0, 0, 0.48));
+$post-user-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
 
 $page-padding: 27px;
 $border-radius: 10px;
+$text-row-width: 485px;
 
 $card-color: #333;
 $card-shadow: 0 1px 30px rgba(111, 178, 216, 0.25);
