--- a/src/styles/info-card.scss
+++ b/src/styles/info-card.scss
@@ -1,5 +1,5 @@
 .info-card {
-  padding: 60px 20px;
+  padding: 60px 20px 35px;
 
   text-align: center;
   border-radius: $border-radius;
@@ -13,10 +13,14 @@
     box-shadow: $card-shadow;
   }
 
+  &__image {
+    height: 57px;
+  }
+
   &__title {
     @extend %card-title;
 
-    margin-bottom: 18px;
+    margin: 22px 0 18px;
   }
 
   &__paragraph {
