--- a/src/styles/targeting.scss
+++ b/src/styles/targeting.scss
@@ -1,5 +1,9 @@
 .targeting {
   @include centering(true);
 
-  padding-bottom: 125px;
+  padding: 26px 0 125px;
+
+  &__title {
+    margin-bottom: 111px;
+  }
 }
