--- a/src/styles/info-card.scss
+++ b/src/styles/info-card.scss
@@ -1,11 +1,13 @@
 .info-card {
-  padding: 60px 20px 35px;
+  padding: 60px 24px 35px;
 
   text-align: center;
   border-radius: $border-radius;
 
   &--shadow {
     box-shadow: $card-shadow;
+    padding-right: 18px;
+    padding-left: 18px;
   }
 
   &--blue {
