--- a/src/styles/mail.scss
+++ b/src/styles/mail.scss
@@ -5,7 +5,7 @@
   padding: 115px 50px;
   box-sizing: border-box;
 
-  background: no-repeat url(../images/mail/Background.svg);
+  background: center / contain no-repeat url(../images/mail/Background.svg);
 
   &__wrapper {
     width: 100%;
