--- a/src/styles/portfolio.scss
+++ b/src/styles/portfolio.scss
@@ -1,7 +1,33 @@
 .portfolio {
   @include centering(true);
 
+  position: relative;
   padding: 139px 0 43px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+
+    width: $wave-width;
+    height: 130%;
+
+    background: $wave-bg;
+    z-index: -2;
+  }
+
+  &::after {
+    content: url(../images/portfolio/decoration.svg);
+    position: absolute;
+    bottom: 5px;
+    right: 102px;
+
+    width: 1635px;
+    height: 732px;
+
+    background: $wave-bg;
+    z-index: -1;
+  }
 
   &__titles {
     padding-bottom: 74px;
