--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -33,6 +33,7 @@
     width: 40px;
     height: 40px;
 
+    color: $contrast;
     background: $text-contrast;
     border-radius: 50%;
     box-shadow: $post-user-shadow;
