--- a/src/styles/footer-end.scss
+++ b/src/styles/footer-end.scss
@@ -11,7 +11,10 @@
 
   background: $contrast;
 
-  // &__text {
-
-  // }
+  &__text {
+    font-size: 12px;
+    line-height: 14.4px;
+    font-weight: 500;
+    color: $text-contrast;
+  }
 }
