--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -2,12 +2,12 @@ $contrast: #0738dd;
 $like-white: #fbfafd;
 $text: #152370;
 $text-contrast: #fff;
-$wave-bg: #eff2f3;
 
 $title-shadow: 0 4px 4px rgba(0, 0, 0, 0.55);
 $h3-shadow: 0 4px 4px rgba(0, 0, 0, 0.55);
 $post-shadow: drop-shadow(0 1px 10px rgba(0, 0, 0, 0.48));
 $post-user-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
+$border-shadow: 0 1px 36px rgba(102, 102, 102, 0.16);
 
 $page-padding: 27px;
 $border-radius: 10px;
@@ -18,3 +18,8 @@ $card-shadow: 0 1px 30px rgba(111, 178, 216, 0.25);
 $card-gradient: linear-gradient(360deg, #0083fe 11.12%, #091cd0 100%);
 $card-height: 300px;
 $card-width: 330px;
+
+$wave-bg: #eff2f3;
+$wave-shadow: 0 4px 130px rgba(76, 164, 214, 0.28);
+$wave-width: calc(100% + 2 * #{$page-padding});
+$wave-heigth: 500px;
