--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,6 +8,7 @@ $h3-shadow: 0 4px 4px rgba(0, 0, 0, 0.55);
 $post-shadow: drop-shadow(0 1px 10px rgba(0, 0, 0, 0.48));
 $post-user-shadow: 0 1px 12px rgba(0, 0, 0, 0.25);
 $border-shadow: 0 1px 36px rgba(102, 102, 102, 0.16);
+$preview-shadow: drop-shadow(0 20px 50px rgba(45, 161, 247, 0.15));
 
 $page-padding: 27px;
 $border-radius: 10px;
