--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -51,7 +51,7 @@
 %card-title {
   font-size: 22px;
   line-height: 26.4px;
-  font-weight: 600px;
+  font-weight: 600;
   text-transform: uppercase;
 }
 
