--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -10,6 +10,7 @@ $border-shadow: 0 1px 36px rgba(102, 102, 102, 0.16);
 $preview-shadow: drop-shadow(0 20px 50px rgba(45, 161, 247, 0.15));
 $comment: 0 1px 12px rgba(0, 0, 0, 0.6);
 $spot-on-shadow: drop-shadow(0 1px 52px rgba(51, 51, 51, 0.85));
+$grow-center-text: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.5));
 
 $page-padding: 27px;
 $border-radius: 10px;
