--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -27,3 +27,28 @@
     justify-content: center;
   }
 }
+
+@mixin slider-button($_opposite: false) {
+  content: "";
+  position: absolute;
+  top: $arrow-y;
+
+  @if $_opposite {
+    right: $arrow-x;
+    transform: translate(50%, -50%);
+  }
+  @else {
+    left: $arrow-x;
+    transform: translate(-50%, -50%) rotate(180deg);
+  }
+
+  width: $arrow-size;
+  height: $arrow-size;
+
+  background: center / 50% no-repeat url(../images/testimonials/arrow.svg);
+  background-color: $text-contrast;
+  border-radius: $border-radius / 2;
+  box-shadow: $border-shadow;
+
+  cursor: pointer;
+}
