--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,6 +4,7 @@ $text: #152370;
 $text-contrast: #fff;
 $testimonials-title: #314d63;
 $responce: #7f7c8c;
+$brands-bg: #fbfbfb;
 
 $title-shadow: 0 4px 4px rgba(0, 0, 0, 0.55);
 $post-shadow: drop-shadow(0 1px 10px rgba(0, 0, 0, 0.48));
