--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -14,6 +14,7 @@ $preview-shadow: drop-shadow(0 20px 50px rgba(45, 161, 247, 0.15));
 $comment: 0 1px 12px rgba(0, 0, 0, 0.6);
 $spot-on-shadow: drop-shadow(0 1px 52px rgba(51, 51, 51, 0.85));
 $grow-center-text: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.5));
+$submit-bg: linear-gradient(360deg, #0083fe 11.12%, #091cd0 100%);
 
 $page-padding: 27px;
 $border-radius: 10px;
