--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,3 +1,5 @@
+$animation: 0.3s;
+
 $contrast: #0738dd;
 $like-white: #fbfafd;
 $text: #152370;
@@ -16,6 +18,7 @@ $comment: 0 1px 12px rgba(0, 0, 0, 0.6);
 $spot-on-shadow: drop-shadow(0 1px 52px rgba(51, 51, 51, 0.85));
 $grow-center-text: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.5));
 $submit-bg: linear-gradient(360deg, #0083fe 11.12%, #091cd0 100%);
+$submit-bg-darken: linear-gradient(360deg, #076bc8 11.12%, #0b188d 100%);
 
 $page-padding: 27px;
 $border-radius: 10px;
