--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -3,11 +3,20 @@
 
   width: 168px;
   max-height: 50px;
-  padding: 15px 10px;
+  padding: 15px 10px 14px;
 
   background: $text-contrast;
   border: 1px solid $contrast;
   border-radius: 5px 25px;
+
+  transition: color $animation,
+    background-color $animation,
+    border-color $animation;
+
+  &:hover {
+    color: $text-contrast;
+    background-color: $contrast;
+  }
 
   &--dark {
     color: #feffff;
